Fix alignment of slider name in presence of floated image
Closes #3075

--- a/app/assets/stylesheets/accordion.sass
+++ b/app/assets/stylesheets/accordion.sass
@@ -87,6 +87,8 @@
           overflow: hidden
       .slide
         display: none
+        .description
+          overflow: hidden
         p
           margin: 13px 0
         .items
